k3s/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: bier-ingress
  namespace: dev-bier
spec:
  rules:
  - host: dev.beer.tino.sh
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: bier-frontend-service
            port: 
              number: 80
  tls:
  - hosts:
    - dev.beer.tino.sh
    secretName: dev-beer-tino-sh-tls
